# umgebung-examples

./: .gitignore  .gitmodules  README.md  test-examples.sh
Advanced/OSC/: CMakeLists.txt  OSC.cpp  application.cpp
Advanced/camera/: CMakeLists.txt  application.cpp  camera.cpp
Advanced/gamepads/: CMakeLists.txt  application.cpp  gamepads.cpp
Advanced/mesh/: CMakeLists.txt  mesh.cpp
Advanced/movie/: CMakeLists.txt  application.cpp  movie.cpp
Advanced/offscreen/: CMakeLists.txt  application.cpp  offscreen-graphics.cpp
Advanced/offscreen-graphics/: CMakeLists.txt  offscreen-graphics.cpp
Advanced/serial/: CMakeLists.txt  application.cpp
Advanced/texture-filtering/: CMakeLists.txt  application.cpp
Advanced/vertexbuffer/: CMakeLists.txt  application.cpp  vertexbuffer.cpp
Audio/MIDI/: CMakeLists.txt  MIDI.cpp
Audio/audiofile/: CMakeLists.txt  audiofile.cpp
Audio/fft-analysis/: CMakeLists.txt  application.cpp
Audio/midi-input/: CMakeLists.txt  midi-input.cpp
Audio/midi-listener/: CMakeLists.txt  midi-listener.cpp
Audio/midi-output/: CMakeLists.txt  midi-output.cpp
Audio/oscillator-adsr/: CMakeLists.txt  application.cpp  oscillator-adsr.cpp
Audio/sampler/: CMakeLists.txt  application.cpp  sampler.cpp
Audio/trigger/: CMakeLists.txt  trigger.cpp
Audio/trigger-listener/: CMakeLists.txt  application.cpp  trigger-listener.cpp
Basics/3D-primitives/: 3D-primitives.cpp  CMakeLists.txt  application.cpp
Basics/begin-end-shapes/: CMakeLists.txt  Geometry.h  begin-end-shapes.cpp
Basics/lights/: CMakeLists.txt  application.cpp  lights.cpp
Basics/load-OBJ/: CMakeLists.txt  Panda.mtl  application.cpp  load-OBJ.cpp
Basics/load-image/: CMakeLists.txt  application.cpp  load-image.cpp
Basics/minimal/: CMakeLists.txt  README.md
Basics/primitives/: CMakeLists.txt  primitives.cpp
Basics/save-OBJ/: CMakeLists.txt  application.cpp  save-OBJ.cpp
Basics/save-PDF/: CMakeLists.txt  save-PDF.cpp
Basics/save-frame/: CMakeLists.txt  application.cpp  save-frame.cpp
Basics/save-image/: CMakeLists.txt  application.cpp
Basics/shape-primitives/: CMakeLists.txt  shape-primitives.cpp
Basics/shape-stroke-and-fill/: CMakeLists.txt  shape-stroke-and-fill.cpp
Basics/shapes/: CMakeLists.txt  application.cpp  shapes.cpp
Basics/shapes-stroke-and-fill/: CMakeLists.txt  application.cpp  shapes-stroke-and-fill.cpp
Basics/template/: CMakeLists.txt  template.cpp
Basics/typography/: CMakeLists.txt  application.cpp  typography.cpp
Processing/: README.md
Processing/template/: CMakeLists.txt  application.cpp
Research/audiofile/: application.cpp
Research/barycentric-wireframe-shader/: CMakeLists.txt  barycentric-wireframe-shader.cpp
Research/debugging-shape-stroke-and-fill/: CMakeLists.txt  debugging-shape-stroke-and-fill.cpp
Research/export-OBJ-PDF/: CMakeLists.txt  export-OBJ-PDF.cpp
Research/game-controller/: CMakeLists.txt  game-controller.cpp
Research/umfeld-capture/: CMakeLists.txt  Info.plist  application.cpp
Research/umfeld-simple/: CMakeLists.txt  umfeld-simple.cpp
Research/umfeld-with-paulstretch/: CMakeLists.txt
Research/umfeld-with-paulstretch/paulstretch/: README.md
Research/umfeld-with-paulstretch/paulstretch/contrib/: kiss_fftr.h
Research/umfeld-with-paulstretch/paulstretch/examples/CLI/input/: InputS.h  MP3InputS.cpp  globals.cpp
Research/umfeld-with-paulstretch/paulstretch/include/: PaulStretch.h
Research/umfeld-with-paulstretch/paulstretch/src/: ProcessedStretch.cpp
WorkInProgress/umfeld-application-bundle/: CMakeLists.txt  umfeld-app.cpp
WorkInProgress/umfeld-application-bundle/Resources/: Info.plist  Umfeld.icns
WorkInProgress/umfeld-application-bundle/libs/: libSDL3_ttf.0.2.0.dylib  libportaudio.2.dylib
WorkInProgress/umfeld-with-paulstretch/paulstretch/: CMakeLists.txt  format-source-code.sh
WorkInProgress/umfeld-with-paulstretch/paulstretch/contrib/: _kiss_fft_guts.h  kiss_fftr.c
WorkInProgress/umfeld-with-paulstretch/paulstretch/examples/CLI/input/: globals.h
WorkInProgress/umfeld-with-paulstretch/paulstretch/examples/cmake/: cmake-example.cpp
WorkInProgress/umgebung-capture/: CMakeLists.txt  umgebung-capture.cpp
WorkInProgress/umgebung-with-paulstretch/: CMakeLists.txt
examples/umgebung-application-bundle/: CMakeLists.txt  umgebung-app.cpp
examples/umgebung-opencv/: CMakeLists.txt  umgebung-opencv.cpp
examples/umgebung-with-KLST_EMU/: CMakeLists.txt  Wavetable.h  umgebung-with-KLST_EMU.cpp
examples/umgebung-with-KLST_EMU/klangstrom-emulator/src/: Arduino.h  ArduinoFunctions.cpp  ArduinoFunctions.h  Drawable.h  KlangstromEmulator.cpp  KlangstromEmulator.h  KlangstromEnvironment.h  PeriodicalTask.h
examples/umgebung-with-KLST_EMU/klangstrom-libraries/Klangstrom/src/: Klangstrom.cpp  Klangstrom.h  KlangstromAudioCodec.h  KlangstromDisplay.h  KlangstromMechanicalKey.cpp  KlangstromMechanicalKey.h  KlangstromSDCard.h  KlangstromSerialDebug.cpp  KlangstromSerialDebug.h
examples/umgebung-with-KLST_EMU/klangstrom-libraries/Klangstrom_KLST_EMU/src/: KlangstromAudioCodec_BSP_KLST_EMU.cpp  KlangstromSerialDebug_BSP_KLST_EMU.cpp
examples/umgebung-with-KLST_EMU/libraries/klangstrom-libraries/Klangstrom/src/: KlangstromAudioCodec.cpp  KlangstromCallbackDefinitions.h  KlangstromDefines.h  KlangstromLEDs.cpp  KlangstromLEDs.h
examples/umgebung-with-KLST_EMU/libraries/klangstrom-libraries/Klangstrom_KLST_EMU/src/: KlangstromLEDs_BSP_KLST_EMU.cpp  Klangstrom_BSP_KLST_EMU.cpp  Klangstrom_BSP_KLST_EMU.h
examples/umgebung-with-paulstretch/: CMakeLists.txt  umgebung-with-paulstretch.cpp
examples/umgebung-with-paulstretch/paulstretch/: CMakeLists.txt  README.md
examples/umgebung-with-paulstretch/paulstretch/contrib/: kiss_fft.c  kiss_fft.h
examples/umgebung-with-paulstretch/paulstretch/examples/CLI/: compile_macOS.sh  main.cpp
examples/umgebung-with-paulstretch/paulstretch/examples/CLI/input/: MP3InputS.h
examples/umgebung-with-paulstretch/paulstretch/examples/cmake/: CMakeLists.txt
examples/umgebung-with-paulstretch/paulstretch/include/: ProcessedStretch.h
test/: test-examples.sh
(+83 files in other folders)
